# jw_pdf_tool

./: .gitignore  CHANGE.md  CLAUDE.md  PLAN.md  README.md  TEST_SCENARIOS.md  jw_pdf.spec  main.py  pdf_editor.spec  pyproject.toml
.github/workflows/: build.yml  release.yml
app/: __version__.py
app/core/: annotator.py  cli.py  command_manager.py  comparator.py  converter.py  form_handler.py  merger.py  ocr_engine.py  optimizer.py  page_editor.py  pdf_document.py  search_engine.py  security.py  stamp.py  watermark.py
app/services/: file_association.py  print_service.py  settings.py  single_instance.py  theme.py  tray_service.py  updater.py
app/ui/: bookmark_panel.py  detached_window.py  main_window.py  page_panel.py  pdf_tab_page.py  pdf_tab_widget.py  pdf_viewer.py  render_engine.py  search_bar.py  toolbar.py
app/utils/: async_worker.py  cache.py  platform.py
docs/: BUILD_PLAN_v2.md  E2E_TEST_PLAN.md  E2E_TEST_PLAN_QA.md  FEATURE_SPEC.md  FEATURE_SPEC_v2.md  TEST_SCENARIOS_FULL.md  UNIT_COMPONENT_TEST_PLAN.md  UNIT_COMPONENT_TEST_PLAN_QA.md  USER_SCENARIOS.md
installer/: setup.iss
scripts/: build.bat  build.ps1  build_installer.bat
tests/: conftest.py  helpers.py
tests/bench/: test_benchmarks.py
tests/core/: test_annotator.py  test_annotator_ext.py  test_architecture.py  test_bookmark_parser.py  test_cache.py  test_cli_args.py  test_command_manager.py  test_comparator.py  test_converter.py  test_converter_export.py  test_converter_markdown.py  test_crop.py  test_form_handler.py  test_generation.py  test_merger.py  test_ocr_engine.py  (+11 more)
(+83 files in other folders)
