[project]
name = "pdf-editor"
version = "0.1.0"
description = "개인용 PDF 편집 데스크탑 애플리케이션"
requires-python = ">=3.11"
dependencies = [
    "PyQt6>=6.6.0",
    "PyMuPDF>=1.24.0",
    "pikepdf>=8.0.0",
    "Pillow>=10.0.0",
    "reportlab>=4.0.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.0.0",
]
