[project]
name = "jw_pdf"
version = "2.0.0"
description = "jw_pdf — 개인용 PDF 편집 데스크탑 애플리케이션"
requires-python = ">=3.11"
dependencies = [
    "PyQt6>=6.6.0",
    "PyMuPDF>=1.24.0",
    "pikepdf>=8.0.0",
    "Pillow>=10.0.0",
    "reportlab>=4.0.0",
    "markdown>=3.5.0",
]

[project.optional-dependencies]
ocr = ["pytesseract>=0.3.10"]
# winocr, pywin32 등은 Windows 전용이므로 선택적 설치
system = ["pywin32>=306"]

[dependency-groups]
dev = [
    "pyinstaller>=6.0.0",
    "pytest>=8.0.0",
    "pytest-qt>=4.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# QT_QPA_PLATFORM=offscreen 은 tests/conftest.py에서 os.environ으로 설정

